<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_monitor">
    
    <fragment
        android:id="@+id/navigation_monitor"
        android:name="com.example.mygraduationproject.ui.monitor.MonitorFragment"
        android:label="@string/title_monitor" />
        
    <fragment
        android:id="@+id/navigation_analysis"
        android:name="com.example.mygraduationproject.ui.analysis.AnalysisFragment"
        android:label="@string/title_analysis" />
        
    <fragment
        android:id="@+id/navigation_control"
        android:name="com.example.mygraduationproject.ui.control.ControlFragment"
        android:label="@string/title_control" />
        
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.mygraduationproject.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />
        
    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.mygraduationproject.ui.chat.ChatFragment"
        android:label="小植" />
        
</navigation>
